# sextractor

./: .buildinfo  .gitignore  .travis.yml  AUTHORS  COPYRIGHT  ChangeLog  ClassStar.html  Config.html  HISTORY  INSTALL  Input.html  Introduction.html  License.html  Makefile.am  Makefile.in  Measurements.html  Param.html  README  README.md  THANKS  Using.html  aclocal.m4  acx_atlas.m4  acx_fftw.m4  acx_mkl.m4  acx_prog_cc_optim.m4  acx_pthread.m4  acx_urbi_resolve_dir.m4  config.h.in  configure  configure.ac  searchindex.js  sextractor.spec.in
branches/gpu/src/: Makefile.am  Makefile.in  analyse.c  astrom.c  astrom.h  catout.c  define.h  fft.c  field.c  filter.c  fitswcs.c  globals.h  header.c  image.h  ldactoasc.c  main.c  makeit.c  param.h  pattern.h  photom.c  plist.c  preflist.h  profit.c  profit.h  psf.h  weight.h  winpos.h  xml.c  xml.h
branches/gpu/src/fits/: fitsbody.c  fitscat_defs.h  fitsconv.c  fitshead.c  fitskey.c  fitsmisc.c  fitsutil.c
branches/gpu/src/levmar/: Axb_core.c  Makefile.am  Makefile.in  README  compiler.h  lm_core.c  lmbc_core.c  lmblec.c  lmbleic.c  lmlec_core.c
branches/gpu/src/wcs/: Makefile.in
branches/multi-deblend/src/: Makefile.am  Makefile.in  analyse.c  analyse.h  back.h  catout.c  catout.h  check.c  check.h  clean.c  clean.h  deblend.c  deblend.h  define.h  filter.c  flag.h  group.c  group.h  growth.c  growth.h  header.c  image.c  image.h  interpolate.h  lutz.c  lutz.h  main.c  makeit.c  neurro.c  objlist.c  objlist.h  paramprofit.h  pattern.h  photom.c  plist.c  plist.h  preflist.h  prefs.c  prefs.h  profit.c  (+15 more)
branches/multi-deblend/src/fits/: fitscleanup.c  fitsconv.c
branches/multi-deblend/src/levmar/: Axb.c  Makefile.vc  lmblec_core.c  lmdemo.c
branches/multi-deblend/src/wcs/: lin.h
branches/multi-deblend/tests/: Makefile.am  default.param  default.sex  efigi1.test  efigi3.test  galaxies.weight.fits
branches/multi/src/wcs/: Makefile  Makefile.am  Makefile.in  README  cel.c  cel.h  lin.c  poly.c  proj.h  sph.h  wcsmath.h
branches/sexfigi/: ChangeLog  HISTORY  Makefile.am  Makefile.in  THANKS  aclocal.m4  acx_atlas.m4  acx_fftw.m4  acx_prog_cc_optim.m4  config.h.in  configure  configure.ac  sextractor-mp.spec.in  sextractor.spec.in
branches/sexfigi/man/: Makefile.in  sex.1
branches/sexfigi/src/: Makefile.am  Makefile.in  analyse.c  astrom.c  astrom.h  back.c  catout.c  check.c  clean.c  define.h  fft.c  fft.h  field.c  fitswcs.c  fitswcs.h  globals.h  main.c  makeit.c  param.h  paramprofit.h  pattern.c  pattern.h  pc.c  photom.c  preflist.h  prefs.c  prefs.h  profit.c  profit.h  psf.c  readimage.c  scan.c  sexhead1.h  threads.h  types.h  wcscelsys.h  xml.c  xml.h
branches/sexfigi/src/fits/: Makefile.in  fitscat.h  fitshead.c
branches/sexfigi/src/levmar/: Axb.c  Axb_core.c  CMakeLists.txt  Makefile.am  Makefile.icc  Makefile.in  Makefile.vc  README  README.txt  lm.c  lm.h  lm_core.c  lmbc.c  lmbc_core.c  lmblec.c  lmblec_core.c  lmdemo.c  lmlec.c  lmlec_core.c  misc.c  misc.h  misc_core.c
branches/sexfigi/src/lmfit/: Makefile.in  lmmin.c
branches/sexfigi/tests/: Makefile.am  Makefile.in  default.param  default.sex
branches/sexfigi/xsl/: sextractor.xsl
software/sextractor/: Makefile.am  Makefile.in  THANKS  aclocal.m4  acx_urbi_resolve_dir.m4  config.h.in  configure  configure.ac  sextractor-tpx.spec.in  sextractor.spec.in
software/sextractor/man/: Makefile.in  sex.1
software/sextractor/src/: Makefile.am  Makefile.in  back.c  ldactoasc.c  main.c  makeit.c  prefs.h  som.c  xml.c
software/sextractor/xsl/: sextractor.xsl
src/fits/: Makefile.am  Makefile.in  fitsbody.c  fitscat.c  fitscat.h  fitscat_defs.h  fitscheck.c  fitsconv.c  fitshead.c  fitskey.c  fitsmisc.c  fitsread.c  fitstab.c  fitsutil.c  fitswrite.c
src/levmar/: Axb_core.c  Makefile.am  Makefile.in  compiler.h  levmar.h  lm.h  lm_core.c  lmbc.c  lmblec.c  lmbleic.c  lmdemo.c  lmlec.c  misc.h  misc_core.c
src/levmar/.deps/: lm.Po  lmbc.Po  lmbleic.Po
src/levmar/matlab/: jacmodhs38.m  levmar.m
src/wcs/: Makefile.am  Makefile.in  cel.c  cel.h  lin.c  lin.h  poly.c  poly.h  proj.c  proj.h  sph.c  sph.h  tnx.c  tnx.h  wcs.c  wcs.h  wcsmath.h  wcstrig.c  wcstrig.h
src/wcs/.deps/: proj.Po  sph.Po  tnx.Po  wcs.Po
tags/2.19.5/: configure  configure.ac
tags/2.19.5/man/: Makefile.am  sex.1.in
tags/2.19.5/src/: Makefile.am  analyse.c  catout.c  check.c  extract.h  flag.c  globals.h  growth.c  ldactoasc.h  neurro.c  photom.c  plist.h  prefs.c  prefs.h  profit.c  refine.c  scan.c  weight.h
tags/2.8.6/: Makefile.am  Makefile.in  acx_atlas.m4  sextractor.spec.in
tags/2.8.6/man/: sex.1
tags/2.8.6/src/: Makefile.in  analyse.c  assoc.h  back.c  catout.c  check.c  check.h  field.c  growth.c  ldactoasc.h  param.h  prefs.c  profit.c  psf.c  psf.h  scan.c  sexhead.h  som.c  winpos.c
tags/2.8.6/tests/: default.sex
trunk/: AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  THANKS  aclocal.m4  acx_atlas.m4  acx_fftw.m4  acx_mkl.m4  acx_urbi_resolve_dir.m4  config.h.in  configure  configure.ac  sextractor.spec.in
trunk/man/: Makefile.am  Makefile.in  sex.1
trunk/src/: Makefile.am  Makefile.in  analyse.c  assoc.c  assoc.h  astrom.c  astrom.h  back.c  bpro.c  catout.c  check.c  check.h  clean.c  clean.h  define.h  dgeo.h  extract.h  fft.c  fft.h  field.c  filter.c  filter.h  fitswcs.c  fitswcs.h  flag.h  globals.h  graph.c  growth.h  header.c  header.h  image.c  interpolate.c  interpolate.h  key.h  ldactoasc.c  ldactoasc.h  main.c  makeit.c  misc.c  neurro.c  (+24 more)
trunk/src/fits/: Makefile.am  Makefile.in  fitsbody.c  fitscat.h  fitscat_defs.h  fitscheck.c  fitscleanup.c  fitsconv.c  fitshead.c  fitskey.c  fitsread.c  fitstab.c  fitsutil.c  fitswrite.c
trunk/src/levmar/: Axb.c  Axb_core.c  Makefile.in  README  README.txt  lm.c  lm.h  lm_core.c  lmbc.c  lmbc_core.c  lmblec.c  lmbleic.c  lmlec.c  misc.c  misc.h  misc_core.c
trunk/src/wcs/: Makefile.am  Makefile.in  cel.c  lin.h  poly.c  poly.h  proj.c  sph.h  tnx.c  wcs.c  wcs.h  wcstrig.c  wcstrig.h
trunk/tests/: Makefile.in  default.param  default.sex
trunk/xsl/: sextractor.xsl
(+483 files in other folders)
